# imghdr-lts

./: .gitignore  README.md  pyproject.toml
src/imghdr_lts/: __init__.py
